crates/service/tests/diagnostics/snapshots/features__diagnostics__operand_amount__more.snap
---
source: crates/service/tests/diagnostics/operand_amount.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 14
        },
        "end": {
          "line": 0,
          "character": 65
        }
      },
      "severity": 1,
      "source": "wat",
      "message": "expected 2 operands, found 3"
    }
  ]
}
